--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -249,7 +249,7 @@
         right: 20px;
     }
     .promo {
-        background: url('../img/main_bg.jpg') no-repeat 57%/cover;
+        background: url('../img/main_bg-my.jpg') no-repeat 57%/cover;
         &__btns {
             margin-top: 30px;
         }
