add icecream page

--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -15,7 +15,7 @@
     &__item {
         padding: 30px 29px 25px 30px;
         border: 1px solid #000000;
-        
+        border-radius: 35px;
         &-icon {
 
         }
