--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -13,6 +13,7 @@
         img {
             width: 100%;
             height: 100%;
+            border-radius: 20px;
         }
     }
 
@@ -81,6 +82,7 @@
             padding: 0 20px;
             font-size: 12px;
             font-weight: 500;
+            border-radius: 5px;
         }
         
     }
@@ -93,6 +95,7 @@
             resize: none;
             padding: 20px;
             font-size: 12px;
+            border-radius: 5px;
         }
     }
     &__btn {
