--- a/src/sass/blocks/_portfolio.scss
+++ b/src/sass/blocks/_portfolio.scss
@@ -24,6 +24,7 @@
         img {
             width: 100%;
             height: 100%;
+            border-radius: 35px;
         }
         &:hover {
             filter: grayscale(100%);
